# javarewrite2016

./: .ghci  .gitmodules  .travis.yml  JavaRewrite.hs  Main.hs  README.md  RandomStuff.hs  javarewrite2016.cabal  rules.txt  stack.yaml  test.java
JavaRewrite/: ApplySubst.hs  ConstantFold.hs  Match.hs  MatchResult.hs  Rewrite.hs  Rewriter.hs  Rule.hs  RuleParser.hs  Syntax.hs  Traversals.hs  Types.hs
dokumentacja/: .gitignore  Makefile  dokumentacja.md
examples/: PeanoNat.java  PeanoNat.txt  bf.java  bf.txt
main/: Main.hs
prototype/: Rewrite.lhs
test/: Spec.hs  TestUtils.hs
