name:                javarewrite2016
version:             0.1.0.0
license:             PublicDomain
author:              Maciej Bielecki
maintainer:          zyla@prati.pl
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .

  exposed-modules:     JavaRewrite
                       JavaRewrite.Rule
                       JavaRewrite.RuleParser

  build-depends:       base >=4.9 && <4.10
                     , language-java == 0.2.*
                     , parsec
                     , pretty
                     , containers
                     , QuickCheck

  default-language:    Haskell2010


executable javarewrite2016
  hs-source-dirs:      main
  main-is:             Main.hs

  build-depends:       base >=4.9 && <4.10
                     , javarewrite2016
                     , language-java == 0.2.*
                     , parsec
                     , pretty
                     , containers

  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base >=4.9 && <4.10
                     , javarewrite2016
                     , language-java == 0.2.*
                     , parsec
                     , pretty
                     , containers
                     , QuickCheck
                     , hspec
                     , HUnit
